bug: rmv scrollbar

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -20,6 +20,10 @@
     width: 15%;
   }
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   &.expand {
     padding: 0 20px;
     width: 100%;
@@ -38,7 +42,8 @@
 
   &.fixed {
     box-shadow: 0px 1px 6px $main-pink;
-    height: 85px;
+    height: 90px;
+    overflow-y: hidden;
     position: fixed;
     top: 0;
     width: 100%;
@@ -105,6 +110,11 @@
       &:hover {
         border-bottom: 1px solid $main-pink;
       }
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
     }
   }
 }
